--- a/.github/workflows/flutter_ci.yml
+++ b/.github/workflows/flutter_ci.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Setup Flutter
       uses: subosito/flutter-action@v2
       with:
-        flutter-version: '3.22.1'  # Ganti sesuai versi Flutter kamu
+        flutter-version: '3.22.1'
 
     - name: Install dependencies
       run: flutter pub get
@@ -32,7 +32,7 @@ jobs:
       run: flutter build apk --release
 
     - name: Upload APK artifact
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@v4
       with:
         name: app-release
         path: build/app/outputs/flutter-apk/app-release.apk
