--- a/.github/workflows/flutter_ci.yml
+++ b/.github/workflows/flutter_ci.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Setup Flutter
       uses: subosito/flutter-action@v2
       with:
-        flutter-version: '3.22.2'
+        flutter-version: '3.7.2'
 
     - name: Install dependencies
       run: flutter pub get
@@ -31,8 +31,11 @@ jobs:
     - name: Build APK release
       run: flutter build apk --release
 
+    - name: Check APK file exists
+      run: ls -la build/app/outputs/flutter-apk/
+
     - name: Upload APK artifact
-      uses: actions/upload-artifact@v4
+      uses: actions/upload-artifact@v3
       with:
         name: app-release
         path: build/app/outputs/flutter-apk/app-release.apk
