--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
   get: ^4.7.2
   flutter: 
     sdk: flutter
-  youtube_player_flutter: ^8.1.0
+  youtube_player_flutter: ^9.1.1
   styled_widget: ^0.4.1
   video_player: ^2.9.2
   marquee_list: ^1.0.0
@@ -38,14 +38,16 @@ dependencies:
   firebase_messaging: ^15.1.6
   avatars: ^3.0.2
   flutter_vector_icons: ^2.0.0
-  fl_chart: ^0.66.2
+  fl_chart: ^0.71.0
 
 
  
 
 dev_dependencies: 
-  flutter_lints: ^2.0.1
+  flutter_lints: ^5.0.0
   flutter_test: 
+    sdk: flutter
+  integration_test:
     sdk: flutter
 
 flutter: 
