--- a/.github/workflows/flutter_android_release.yml
+++ b/.github/workflows/flutter_android_release.yml
@@ -3,38 +3,51 @@ name: Build Flutter Android APK and Upload to GitHub Releases
 on:
   push:
     branches:
-      - gh-pages
+      - gh-pages  # Ganti sesuai branch utama kamu, misalnya 'main' jika pakai 'main'
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+    - name: Checkout Repository
+      uses: actions/checkout@v3
 
-      - uses: subosito/flutter-action@v2
-        with:
-          channel: stable
+    - name: Set up Flutter
+      uses: subosito/flutter-action@v2
+      with:
+        channel: stable
 
-      - name: Install dependencies
-        run: flutter pub get
+    - name: Cache Flutter and Gradle
+      uses: actions/cache@v3
+      with:
+        path: |
+          ~/.pub-cache
+          ~/.gradle
+        key: ${{ runner.os }}-flutter-${{ hashFiles('**/pubspec.yaml') }}
+        restore-keys: |
+          ${{ runner.os }}-flutter
 
-      - name: Build APK
-        run: flutter build apk --release
+    - name: Install dependencies (with retry)
+      run: |
+        for i in 1 2 3; do flutter pub get && break || sleep 10; done
 
-      - name: Create GitHub Release
-        id: create_release
-        uses: softprops/action-gh-release@v1
-        with:
-          tag_name: v${{ github.run_number }}
-          name: Release v${{ github.run_number }}
-          body: APK built automatically from GitHub Actions
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: Build APK
+      run: flutter build apk --release
 
-      - name: Upload APK to Release
-        uses: softprops/action-gh-release@v1
-        with:
-          files: build/app/outputs/flutter-apk/app-release.apk
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: Create GitHub Release
+      id: create_release
+      uses: softprops/action-gh-release@v1
+      with:
+        tag_name: v${{ github.run_number }}
+        name: Release v${{ github.run_number }}
+        body: APK built automatically from GitHub Actions
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Upload APK to Release
+      uses: softprops/action-gh-release@v1
+      with:
+        files: build/app/outputs/flutter-apk/app-release.apk
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
