Fix build APK workflow

--- a/.github/workflows/flutter_android_release.yml
+++ b/.github/workflows/flutter_android_release.yml
@@ -2,8 +2,8 @@ name: Build Flutter Android APK and Upload to GitHub Releases
 
 on:
   push:
-    branches:
-      - main  # Ubah ke gh-pages jika kamu tetap ingin pakai gh-pages (tidak disarankan)
+    tags:
+      - v*
 
 jobs:
   build:
@@ -16,6 +16,7 @@ jobs:
     - name: Setup Flutter
       uses: subosito/flutter-action@v2
       with:
+        flutter-version: '3.22.1'  # Gunakan versi Flutter stabil yang kamu pakai
         channel: stable
 
     - name: Install dependencies
@@ -24,23 +25,7 @@ jobs:
     - name: Build APK
       run: flutter build apk --release
 
-    - name: Create Git Tag
-      run: |
-        git config user.name "github-actions[bot]"
-        git config user.email "github-actions[bot]@users.noreply.github.com"
-        git tag v${{ github.run_number }}
-        git push origin v${{ github.run_number }}
-
-    - name: Create GitHub Release
-      uses: softprops/action-gh-release@v1
-      with:
-        tag_name: v${{ github.run_number }}
-        name: Release v${{ github.run_number }}
-        body: APK build for Android release
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-    - name: Upload APK to GitHub Release
+    - name: Upload APK to GitHub Releases
       uses: softprops/action-gh-release@v1
       with:
         files: build/app/outputs/flutter-apk/app-release.apk
