--- a/.github/workflows/flutter_android_release.yml
+++ b/.github/workflows/flutter_android_release.yml
@@ -19,7 +19,8 @@ jobs:
     - name: Setup Flutter
       uses: subosito/flutter-action@v2
       with:
-        flutter-version: '3.4.1'
+        flutter-version: '3.22.1'
+        channel: stable
 
     - name: Install dependencies
       run: flutter pub get
