--- a/.github/workflows/flutter_build.yml
+++ b/.github/workflows/flutter_build.yml
@@ -19,8 +19,8 @@ jobs:
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.22.1'
-          channel: stable
+          flutter-version: '3.22.2'
+          channel: beta
 
       - name: Install dependencies
         run: flutter pub get
